AM_CFLAGS = -pedantic -Wall -std=gnu17
AM_LDFLAGS = -lpthread

bin_PROGRAMS = exercise1v1 \
			   exercise1v2 \
			   exercise2v1 \
			   exercise2v2 \
			   exercise2v3
exercise1v1_SOURCES = exercise1v1.c
exercise1v2_SOURCES = exercise1v2.c
exercise2v1_SOURCES = exercise2v1.c
exercise2v2_SOURCES = exercise2v2.c
exercise2v3_SOURCES = exercise2v3.c
